syntax = "proto3";

package secret;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/KirylJazzSax/secret-keeper/internal/common/gen/secret";

message Secret {
    string id = 1;
    string title = 2;
    string body = 3;
}

message ShowSecretRequest {
    string id = 1;
    string email = 2;
    string password = 3;
}

message ShowSecretResponse {
    Secret secret = 1;
}

message SecretsListRequest {}

message SecretsListResponse {
    repeated Secret secrets = 1;
}

message SaveSecretRequest {
    string title = 1;
    string body = 2;
}

message SaveSecretResponse {
    Secret secret = 1;
}

message DeleteSecretRequest {
    string id = 1;
}

message DeleteSecretResponse {}

message DeleteAllSecretsRequest {}

message DeleteAllSecretsResponse {}

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Secret Keeper API";
		version: "0.1";
		contact: {
			name: "Secret Keeper";
			url: "https://github.com/KirylJazzSax";
			email: "kirilljazzsax@gmail.com";
		};
	};
};

service SecretKeeper {
    rpc SaveSecret(SaveSecretRequest) returns (SaveSecretResponse) {
        option (google.api.http) = {
            post: "/v1/secrets"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Create secret, provide title and body which should be encripted";
			summary: "Create secret";
        };
    }
    rpc SecretsList(SecretsListRequest) returns (SecretsListResponse) {
        option (google.api.http) = {
            get: "/v1/secrets"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Show all secrets that you saved";
			summary: "Show secrets";
        };
    }
    rpc ShowSecret(ShowSecretRequest) returns (ShowSecretResponse) {
        option (google.api.http) = {
            post: "/v1/secrets/{id}",
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Show decoded secret by id";
			summary: "Show secret";
        };
    }
    rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {
        option (google.api.http) = {
            delete: "/v1/secrets/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Delete secret by id";
			summary: "Delete secret";
        };
    }
    rpc DeleteAllSecrets(DeleteAllSecretsRequest) returns (DeleteAllSecretsResponse) {
        option (google.api.http) = {
            delete: "/v1/secrets"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Delete all secrets, be careful with that command, you can never restore that";
			summary: "Delete all secrets";
        };
    }
}